--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,25 @@
 }
 
 :root {
+    --cadetblue: #5f9ea0;
+    --blue:#1f7b98;
+    --copper-rose:	#a0615f;
     --black:#080808;
     --white-smoke:#f5f5f5;
+}
+
+body{
+    background-color: var(--cadetblue);
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    padding: 0 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+h1 {
+    
+    margin: 10px auto;
 }
