--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,11 @@ h1 {
     margin: 10px auto;
 }
 
+.container {
+    display:flex;
+    text-wrap: wrap;
+}
+
 input {
 width:250px;
 height: 25px;
