--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,10 @@
 }
 
 :root {
-    --cadetblue: #5f9ea0;
-    --blue:#1f7b98;
-    --copper-rose:	#a0615f;
+    --cadetblue: #5F9EA0;
+    --blue:#1F7B98;
+    --rose-dust : #A05F7E;
+    --pale-brown: #A0825F;
     --black:#080808;
     --white-smoke:#f5f5f5;
 }
@@ -26,7 +27,7 @@ body{
 }
 
 h1 {    
-    margin: 10px auto;
+    margin: 50px auto;
 }
 
 .container {
@@ -34,11 +35,14 @@ h1 {
     text-wrap: wrap;
 }
 
+
+
 input {
 width:250px;
-height: 25px;
+height: 30px;
 border-radius: 12px;
-border: 2px solid var(--copper-rose);
+margin-top: 25px;
+
 }
 
 button {
@@ -46,4 +50,6 @@ button {
     border: 2px solid var(--copper-rose);
     border-radius: 12px;
     padding: 5px;
+    width: 100px;
+    height: 30px;
 }
