--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     --rose-dust : #A05F7E;
     --pale-brown: #A0825F;
     --black:#080808;
-    --white-smoke:#f5f5f5;
+    --white:#FFFFFF;
 }
 
 body{
@@ -33,12 +33,15 @@ h1 {
 .container {
     display:flex;
     text-wrap: wrap;
+    border: 3px solid var(--white);
+    border-radius: 8px;
+    padding: 20px;
 }
 
 input {
 width:250px;
 height: 30px;
-border-radius: 12px;
+border-radius: 8px;
 margin-top: 25px;
 border: 2px solid var(--black);
 }
@@ -46,7 +49,7 @@ border: 2px solid var(--black);
 button {
     background-color: var(--pale-brown);
     border: 2px solid var(--black);
-    border-radius: 12px;
+    border-radius: 8px;
     padding: 5px;
     width: 100px;
     height: 30px;
