--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,12 @@ body{
     justify-content: center;         
 }
 
+h1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .container {
     display:flex;
     flex-direction: column;
