--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ button:hover{
     font-size: 13.5px;
 }
 
-#sprite-container {
+.sprite-container {
     flex-grow: 2;
     display: flex;
     align-items: center;
